@@ -412,9 +412,6 @@ class GtkDoc(BaseDoc.BaseDoc):
     def draw_line(self,style,x1,y1,x2,y2):
         pass
     
-    def write_at(self, style, text, x, y):
-        pass
-    
     def draw_bar(self, style, x1, y1, x2, y2):
         pass
     
