@@ -1,3 +1,15 @@
+2007-02-11  Brian Matherly  <brian@gramps-project.org>
+	* src/BaseDoc.py: remove write_at
+	* src/docgen/PSDrawDoc.py: remove write_at
+	* src/docgen/SvgDrawDoc.py: remove write_at, add center_text
+	* src/docgen/OpenOfficeDoc.py: remove write_at
+	* src/docgen/PdfDoc.py: remove write_at
+	* src/docgen/GtkPrint.py: remove write_at
+	* src/plugins/StatisticsChart.py: pass draw style to legend
+	* src/docgen/LPRDoc.py: remove write_at
+	* src/docgen/ODFDoc.py: remove write_at
+	* src/ReportBase/_ReportUtils.py
+
 2007-02-11  Don Allingham  <don@gramps-project.org>
 	* src/Merge/_MergePlace.py: merge from 2.2 tree
 	* src/GrampsDbUtils/_GedcomParse.py: parsing improvements
